--- a/website/index.qmd
+++ b/website/index.qmd
@@ -29,14 +29,9 @@ explain and present our vision, procedures and progress. The 'output' evaluation
 including feedback and discussion, can be found on our 
 [PubPub page](https://unjournal.pubpub.org/), and are indexed in scholarly archives.
 
-We also have interactive dashboards:
+We also have an [interactive dashboard](https://unjournal.shinyapps.io/uj-dashboard/).
 
-- [here](https://unjournal.shinyapps.io/DataExplorer/)
-
-- [and here](https://unjournal.shinyapps.io/uj-dashboard/)
-
-
-This site and the accompanying dashboards present data and analysis on The Unjournal's 
+This site and the dashboard present data and analysis on The Unjournal's 
 pipeline and evaluation output. We use them to:
 
 1. Keep track of what we are covering, when and how.
@@ -72,13 +67,13 @@ This resource aims to be:
 here and in the accompanying dashboards.
 
 
-### Data explorer {-}
+### Data dashboard {-}
 
 ::: column-body-outset
 
 ```{=html}
 
-<iframe height="900" width="120%" frameborder="no" src="https://unjournal.shinyapps.io/DataExplorer/"> </iframe>
+<iframe height="900" width="120%" frameborder="no" src="https://unjournal.shinyapps.io/uj-dashboard/"> </iframe>
 
 
 ```
